# solana-project

./: .gitignore  Anchor.toml  Makefile  README.md  package.json
app/cli/: README.md  package.json  tsconfig.json
app/cli/src/: app.ts  solana_project.ts
localnet/: alice.json  bank.json  bob.json  program.json
localnet/ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-Ay6N4hLKba3Q5dSThimgcBRvWGPUHhAwQJKWZWDHfmiB.tar.bz2  snapshot-1800-H7bkaizbdaWjtDZNN44iNswGQ7VcovbsqTzLFFSczEUM.tar.bz2  snapshot-1900-HYFThV9MRu2y55dAsdmhkRSAyfgba2hNUKHmhPj8DJUh.tar.bz2  validator-keypair.json  vote-account-keypair.json
localnet/ledger/accounts/: 0.3  100.0  1000.25  1030.26  1100.27  1110.28  1200.29  1229.30  130.4  1300.31  1315.32  1400.33  1414.34  1500.35  1519.36  1600.37  1620.38  1700.39  1717.40  1800.41  1829.42  1900.43  1902.44  200.5  203.6  27.2  28.1  300.7  306.8  400.9  402.10  439.13  491.12  500.11  513.14  600.15  627.16  673.18  700.17  730.19  (+4 more)
localnet/ledger/rocksdb/: 000227.sst  000230.sst  000233.sst  000245.sst  000251.sst  000254.sst  000258.sst  000262.sst  000265.sst  000268.sst  000271.sst  000274.sst  000277.sst  IDENTITY  LOG  LOG.old.1648295072288111  MANIFEST-000086  OPTIONS-000119  OPTIONS-000121
localnet/ledger/snapshot/1200/: 1200
programs/solana-project/: Cargo.toml
programs/solana-project/src/: lib.rs
programs/solana-project/src/instructions/: config.rs  donate.rs  initialize.rs  initialize_user.rs  mod.rs  withdraw.rs
programs/solana-project/src/state/: mod.rs  store.rs
tests/: solana-project.ts
(+7 files in other folders)
